--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Octopod Systems s. r. o.",
+    "title": "Octopod Systems",
     "description": "Zabýváme se vývojem software na míru.",
     "learnMore": "Zjistit více"
   },
