--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Octopod Systems s. r. o.",
+    "title": "Octopod Systems",
     "description": "We provide custom software development to meet your specific needs and requirements.",
     "learnMore": "Learn More"
   },
