--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -40,7 +40,7 @@
     "success": "Zpráva byla úspěšně odeslána!",
     "error": "Došlo k chybě při odesílání zprávy.",
     "contactInfo": {
-      "email": "E-mail: michalcovla@gmail.com",
+      "email": "E-mail: pavel.michalec@octopodsystems.com",
       "address": "Adresa: Štursova 638/43, 400 01 Ústí nad Labem"
     }
   },
