--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,7 @@
     "success": "Message sent successfully!",
     "error": "There was an error sending the message.",
     "contactInfo": {
-      "email": "Email: michalcovla@gmail.com",
+      "email": "Email: pavel.michalec@octopodsystems.com",
       "address": "Address: Štursova 638/43, 400 01 Ústí nad Labem"
     }
   },
